--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.10",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
+    "firebase": "^10.4.0",
     "next": "13.5.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "eslint-config-next": "^13.5.3"
   }
 }
