--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.10",
     "autoprefixer": "10.4.16",
+    "aws-sdk": "^2.1467.0",
     "eslint": "8.50.0",
     "firebase": "^10.4.0",
     "next": "13.5.3",
